--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,2 @@
-body {
-  background-color: red;
-}
+@import "~bootstrap-sass/assets/stylesheets/_bootstrap-sprockets.scss";
+@import '~bootstrap-sass/assets/stylesheets/bootstrap';
